<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/menu_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view_linear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_bubble"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/adiblar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_active="true"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="#81BD94"
            app:bt_icon="@drawable/ic_adib_click"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/bubble1" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/saqlangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_active="true"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="#81BD94"
            app:bt_icon="@drawable/ic_saqlangan_click"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/bubble2" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/sozlamalar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_active="true"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="#81BD94"
            app:bt_icon="@drawable/ic_sozlamalar_click"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/bubble3" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>


</androidx.constraintlayout.widget.ConstraintLayout>